--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "chat": "https://laminas.dev/chat",
         "forum": "https://discourse.laminas.dev"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
         "sort-packages": true,
         "allow-plugins": {
@@ -47,16 +49,21 @@
     },
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "axleus/axleus-db": "1.0.x-dev",
         "composer/package-versions-deprecated": "^1.10.99",
         "laminas/laminas-component-installer": "^2.6 || ^3.0",
         "laminas/laminas-config-aggregator": "^1.6",
         "laminas/laminas-diactoros": "^3.0.0",
+        "laminas/laminas-i18n": "^2.28",
+        "laminas/laminas-servicemanager": "^3.22",
         "laminas/laminas-stdlib": "^3.6",
         "mezzio/mezzio": "^3.7",
-        "mezzio/mezzio-helpers": "^5.7",
-        "laminas/laminas-servicemanager": "^3.22",
+        "mezzio/mezzio-authentication-session": "^1.9",
         "mezzio/mezzio-fastroute": "^3.11.0",
-        "mezzio/mezzio-laminasviewrenderer": "^2.15"
+        "mezzio/mezzio-helpers": "^5.7",
+        "mezzio/mezzio-laminasviewrenderer": "^2.15",
+        "mezzio/mezzio-session-ext": "^1.19",
+        "webinertia/limatus": "0.0.16.x-dev"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.5.0",
@@ -70,7 +77,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App/src/"
+            "App\\": "src/App/src/",
+            "ContactManager\\": "src/ContactManager/src/"
         }
     },
     "autoload-dev": {
