--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,6 @@
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "composer/package-versions-deprecated": true,
             "laminas/laminas-component-installer": true
-        },
-        "platform": {
-            "php": "8.1.99"
         }
     },
     "extra": {
@@ -66,14 +63,15 @@
         "webinertia/limatus": "0.0.16.x-dev"
     },
     "require-dev": {
+        "axleus/axleus-dev-tools": "1.0.x-dev",
+        "filp/whoops": "^2.15.4",
         "laminas/laminas-coding-standard": "~2.5.0",
         "laminas/laminas-development-mode": "^3.12.0",
         "mezzio/mezzio-tooling": "^2.9",
         "phpunit/phpunit": "^10.5.5",
         "psalm/plugin-phpunit": "^0.18.4",
         "roave/security-advisories": "dev-master",
-        "vimeo/psalm": "^5.18",
-        "filp/whoops": "^2.15.4"
+        "vimeo/psalm": "^5.18"
     },
     "autoload": {
         "psr-4": {
