Moves login to UserManager Signed-off-by: Joey Smith <jsmith@webinertia.net>
Signed-off-by: Joey Smith <jsmith@webinertia.net>

--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/App/src/",
-            "ContactManager\\": "src/ContactManager/src/"
+            "ContactManager\\": "src/ContactManager/src/",
+            "UserManager\\": "src/user-manager/src/"
         }
     },
     "autoload-dev": {
