--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "laminas/laminas-component-installer": "^2.6 || ^3.0",
         "laminas/laminas-config-aggregator": "^1.6",
         "laminas/laminas-diactoros": "^3.0.0",
+        "laminas/laminas-form": "^3.20",
         "laminas/laminas-i18n": "^2.28",
         "laminas/laminas-servicemanager": "^3.22",
         "laminas/laminas-stdlib": "^3.6",
@@ -59,8 +60,7 @@
         "mezzio/mezzio-fastroute": "^3.11.0",
         "mezzio/mezzio-helpers": "^5.7",
         "mezzio/mezzio-laminasviewrenderer": "^2.15",
-        "mezzio/mezzio-session-ext": "^1.19",
-        "webinertia/limatus": "0.0.16.x-dev"
+        "mezzio/mezzio-session-ext": "^1.19"
     },
     "require-dev": {
         "axleus/axleus-dev-tools": "1.0.x-dev",
